--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -10,7 +10,7 @@
 format: jb-book  # 可选 jb-article，jb-book
 root: index # A path to the *root page* (landing page) of your book
 parts:
-- caption: 案例
+- caption: 教程
   chapters:
-  - file: markdown
-  - file: notebooks
+  - file: start
+  - file: gesture-recognition
