--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -7,7 +7,13 @@ sphinx_inline_tabs
 sphinx-click
 ipywidgets
 nbclient
-# sphinxext-rediraffe
+sphinxext-rediraffe
 sympy
 # jupyter-dash
 plotly
+joblib
+mediapipe
+opencv-python
+scikit-learn
+seaborn
+scikit-image
