--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@
 
 #######################################################################################
 # Book settings
-title: 品味人生 # 书的标题。将放置在左侧导航栏中。
+title:"" # 书的标题。将放置在左侧导航栏中。
 author: xinetzone
 copyright: "2021" # 版权年份将放置在页脚中
 logo: logo.jpg # 图书徽标的路径
