--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -77,7 +77,7 @@ html:
           data-tooltip="领英联系我: xinet" data-position="top" data-delay="50">
           <i class="fab fa-linkedin"></i>
       </a>
-      <div><a href="https://github.com/xinetzone/OpenPose-book">Jupyter Book</a> 版权所有</div>
+      <div><a href="https://github.com/daobook/OpenPose-book">Jupyter Book</a> 版权所有</div>
     </div> 
   extra_footer: "" # Will be displayed underneath the footer.
   google_analytics_id: "" # A GA id that can be used to track book views.
@@ -86,7 +86,7 @@ html:
   comments:
     hypothesis: true
     utterances:
-      repo: "xinetzone/OpenPose-book"
+      repo: "daobook/OpenPose-book"
 
 #######################################################################################
 # LaTeX-specific settings
@@ -106,7 +106,7 @@ launch_buttons:
   colab_url: "" # The URL of Google Colab (https://colab.research.google.com)
 
 repository:
-  url: https://github.com/xinetzone/OpenPose-book # The URL to your book's repository
+  url: https://github.com/daobook/OpenPose-book # The URL to your book's repository
   path_to_book: "docs" # A path to your book's folder, relative to the repository root.
   branch: main # Which branch of the repository should be used when creating links
 
